# raims

./: .gitignore  Dockerfile  GC-MS_data_exploration.ipynb  GC-MS_mz_spectral_model.ipynb  Gas2vec.ipynb  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  raims-submit-template.sh  raims_job.py  requirements.txt  run.sh  run_metacentrum.sh  setup.cfg
docker/: Dockerfile  docker-compose.yml
notebooks/: Gas2vec.ipynb  data_splitting.ipynb  demo_data_splitting.ipynb  demo_embedding.ipynb  demo_model_gpt2.ipynb  demo_model_lstm.ipynb  demo_model_mlp.ipynb  evaluationA.ipynb  evaluationB.ipynb  explore_data.ipynb  explore_evaluation.ipynb  explore_severity.ipynb  explore_training.ipynb  explore_visual.ipynb  feedforward_model_LR_MLP.ipynb  generative_model_Decoder.ipynb  generative_model_LSTM.ipynb  knn_model_Gas2VecKNN.ipynb  knn_model_SpecKNN.ipynb  matching_model.ipynb  multilayer_perceptron.ipynb  splits.ipynb  splitting.ipynb
report/: .gitignore  report.bib  report.tex
singularity/: raims_jupyter.def  singularity-compose.yml
src/msai/: data.py  datasets.py  evaluation.py  metrics.py  plots.py  utils.py
src/msai/model/: feedforward_mlp.py  generatice_lstm.py  generative_lstm.py  transformer.py
src/raims/: __init__.py  data.py  module.py  split.py
src/raims/data/: __init__.py  fixed_size_dataset.py  generative_dataset.py  huggingface_dataset.py  util.py
src/raims/model/: __init__.py  gpt2.py  lstm.py  mlp.py
src/raims/nn/: __init__.py  gpt2.py  lstm.py  mlp.py
