[metadata]
name = msai
version = 0.0.1
author = ICS Masaryk University
description = AI-based Methods for Mass Spectrometry
long_description = file: README.md, LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    matchms
    numpy
    seaborn
    torch

[options.packages.find]
where = src
