[metadata]
name = raims
version = 0.0.1
author = ICS Masaryk University
description = AI-based Methods for Mass Spectrometry
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    matchms>=0.14.0
    numpy>=1.21.0
    pytorch-lightning>=1.5.10
    spec2vec>=0.5.0
    torch>=1.10.2
    transformers>=4.16.2

[options.packages.find]
where = src
